[FEATURE][EXPERIMENTAL] Support add javafx in LauncherEngineWrapper